--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     
         <h1>This is a Header</h1>
         <p> This is a paragragh</p>
-                <p> This is a paragragh</p>
+        <p> This is a second paragragh</p>
+        <p> This is a third paragragh</p>
+        <p> This is a fourth paragragh</p>
 
     </body>
     
